fixed overflow and updated name

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,14 @@
 @tailwind base;
   @tailwind components;
   @tailwind utilities;
-
+ 
+ 
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden; /* Prevent scrolling */
+  }
   @layer base {
     :root {
       --background: 0 0% 100%;
